Fixed contrast on error messages

--- a/csgo_compare/base/static/base/css/main.css
+++ b/csgo_compare/base/static/base/css/main.css
@@ -400,3 +400,7 @@ footer {
 .list-hover:hover p {
     color: var(--text-highlight-color);
 }
+
+.errorlist li {
+    color: red;
+}
